# routes/api.php
@@ -47,5 +47,5 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::post('/store-address', [AddressController::class, 'storeAddress'])->middleware('throttle:address');
     Route::put('/update-address/{address}', [AddressController::class, 'updateAddress'])->middleware(['throttle:address', 'can:update,address']);
     
-    // Route::get('/provinces/{province}/cities', [AddressController::class, 'getCities']);
+    Route::get('/provinces/{province}/cities', [AddressController::class, 'getCities']);
 });
